Revision history for Carp-Clan

{{$NEXT}}
 - fix warning in bad test (thanks, Todd Rinaldo - RT#130494)

6.07      2018-12-02 21:44:55Z
 - declared test prerequisites in the proper phase (RT#125288)
 - modernized distribution tooling

6.06      2016-05-29
 - Avoid failure due to version self-check in 20pre560.t
   This test seems like a footgun for release management reasons, but apprently
   I wasn't quite as careful as I tried to be in keeping the last release minimal.

6.05      2016-05-29
 - Patch tests failing due to 5.25.1+'s deprecated unquoted { } in regex.
   (RT #114537)

6.04      2009-10-24
 - Solved RT ticket #50796 (inform type of license)
 - Made the test suite compatible with Perl versions < v5.6.0

6.03      2009-10-18
 - Re-release to resolve confusion in CPAN caused by intermediate release
   of Carp::Clan 5.4 (backport of bugfix #50560 below for Perls < v5.6.0)

6.02      2009-10-17
 - Forgot to fix the bug of duplicated prefixes in _longmsg as well

6.01      2009-10-16
 - Fixed bug of duplicated prefixes (RT ticket #50560)

6.00      2008-02-17
 - Oops. Fixed version number. '5.10' is less than '5.9'. I thought
   CPAN would handle this but apparently not..

5.10      2008-01-10
 - Removed the circular dependency on Object::Deadly. It was only
   used for testing and would only succeed if you already had O::D
   installed.

5.9       2007-11-04
 - Test::Exceptions is mandatory for testing.
 - Fixed http://rt.cpan.org/Ticket/Display.html?id=26255.

5.8       2006-10-09
 - Stop testing that ->VERSION is a specific thing. I'm not sure why
   that was ever tested in the first place.

5.7       2006-10-02
 -  Stop PAUSE from attempting to index DB package.

5.6       2006-10-02

 -  Fixed test to predefined croak/confess/cluck/carp functions don't
    break tests.
 -  Use Object::Deadly even saner.
 -  Use named lexicals in diag().
 -  Skip testing import of carp/croak/cluck/confess if they existed
    prior to loading Carp::Clan.