@@ -1,11 +1,6 @@
 use strict;
 use warnings;
 
-#BEGIN
-#{
-#    if ($] >= 5.006) { print "1..0 # skip current Perl version $] >= 5.006000\n"; exit 0; }
-#}
-
 # ======================================================================
 #   use Carp::Clan qw(package::pattern);
 #   croak();
