@@ -2,6 +2,8 @@ Revision history for Carp-Clan
 
 {{$NEXT}}
  - fix warning in bad test (thanks, Todd Rinaldo - RT#130494)
+ - speed up code that was accomodating ancient perl versions that are no
+   longer supported
 
 6.07      2018-12-02 21:44:55Z
  - declared test prerequisites in the proper phase (RT#125288)
